feat(auth): implement password reset functionality and email service integration

--- a/flossk-ms/FlosskMS.API/appsettings.Development.json
+++ b/flossk-ms/FlosskMS.API/appsettings.Development.json
@@ -23,5 +23,20 @@
     "Host": "localhost",
     "Port": 3310,
     "TimeoutMs": 30000
+  },
+  "ResendSettings": {
+    "ApiKey": "re_ENJM3cSr_DT5fQzwMUtRMRxrexGcmWBjB",
+    "FromEmail": "onboarding@resend.dev",
+    "FromName": "FlosskMS",
+    "FrontendBaseUrl": "http://localhost:4200"
+  },
+  "SmtpSettings": {
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "Username": "daorsahyseni@gmail.com",
+    "Password": "zwbv fkkz ppbr vpjd ",
+    "FromEmail": "daorsahyseni@gmail.com",
+    "FromName": "FlosskMS Dev",
+    "FrontendBaseUrl": "http://localhost:4200"
   }
 }
