feat: Refactor leaderboard functionality to remove top parameter and enhance logging structure

--- a/sakai-ng/tsconfig.json
+++ b/sakai-ng/tsconfig.json
@@ -24,6 +24,9 @@
             ],
             "@environments/*": [
                 "src/environments/*"
+            ],
+            "@interfaces/*": [
+                "src/interfaces/*"
             ]
         }
     },
