--- a/flossk-ms/FlosskMS.API/appsettings.Development.json
+++ b/flossk-ms/FlosskMS.API/appsettings.Development.json
@@ -25,7 +25,7 @@
     "TimeoutMs": 30000
   },
   "ResendSettings": {
-    "ApiKey": "re_ENJM3cSr_DT5fQzwMUtRMRxrexGcmWBjB",
+    "ApiKey": "",
     "FromEmail": "onboarding@resend.dev",
     "FromName": "FlosskMS",
     "FrontendBaseUrl": "http://localhost:4200"
@@ -34,7 +34,7 @@
     "Host": "smtp.gmail.com",
     "Port": 587,
     "Username": "daorsahyseni@gmail.com",
-    "Password": "zwbv fkkz ppbr vpjd ",
+    "Password": "",
     "FromEmail": "daorsahyseni@gmail.com",
     "FromName": "FlosskMS Dev",
     "FrontendBaseUrl": "http://localhost:4200"
